--- a/src/FreshCommonUtility/project.json
+++ b/src/FreshCommonUtility/project.json
@@ -12,7 +12,8 @@
         "MySql.Data.Core": "7.0.4-IR-191",
         "System.Text.Encoding.CodePages": "4.0.1",
         "MailKit": "1.10.1",
-        "Npgsql": "3.1.8"
+        "Npgsql": "3.1.8",
+        "Newtonsoft.Json": "9.0.1"
     },
     "frameworks": {
         "netstandard1.6": {
