--- a/src/DemoWebsite/appsettings.json
+++ b/src/DemoWebsite/appsettings.json
@@ -18,7 +18,7 @@
       "ConnectionString": "127.0.0.1:6379,abortConnect=false,defaultDatabase=1"
     },
     //Mysql connection string.
-    "MySqlConnectionString": "server=127.0.0.1;database=SimplecrudDemoWebsite;uid=FreshMan;pwd=dbpassword;charset='gbk';SslMode=None",
+    "MySqlConnectionString": "server=127.0.0.1;database=SimplecrudDemoWebsite;uid=FreshMan;pwd=qinxianbo;charset='gbk';SslMode=None",
     //Email server config
     "EmailServerConfig": {
       "FromName": "FreshMan",
